volexc/tests/ui/mapkey_array_of_float.go.out
Error: invalid map key type: arrays cannot be used as map keys in Go
   ╭─[mapkey_array_of_float.vol:6:12]
   │
 6 │     data: {[f32]:string}
   │            ──┬──  
   │              ╰──── array type used here
───╯