volexc/tests/ui/mapkey_array_of_float.vol
// rust:fail
// go:fail
// typescript:fail
// Array of floats is invalid as map key in all languages
struct Test {
    data: {[f32]:string}
}
